--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "/dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && tsc",
+    "dev": "nodemon --exec 'npm run build' --watch ./src/**/*"
   },
   "repository": {
     "type": "git",
