--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/mikedelcastillo/vows-tools#readme",
   "dependencies": {
-    "typescript": "^4.5.4"
+    "axios": "^0.25.0",
+    "typescript": "^4.5.4",
+    "vuex-module-decorators": "^2.0.0"
   }
 }
