--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "dev": "nodemon --exec 'npm run build' --watch ./src/**/*"
+    "dev": "nodemon  --watch ./src/**/* --exec 'npm run build'",
+    "test": "jest",
+    "test:dev": "nodemon --watch ./test/**/* --exec jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,13 @@
   "homepage": "https://github.com/mikedelcastillo/vows-tools#readme",
   "dependencies": {
     "axios": "^0.25.0",
+    "vue": "^3.2.29"
+  },
+  "devDependencies": {
+    "dotenv": "^14.3.0",
+    "jest": "^27.4.7",
     "typescript": "^4.5.4",
+    "vuex": "^4.0.2",
     "vuex-module-decorators": "^2.0.0"
   }
 }
