--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "rm -rf dist && tsc",
     "dev": "nodemon  --watch ./src/**/* --exec 'npm run build'",
     "test": "jest",
-    "test:dev": "nodemon --watch ./test/**/* --exec jest"
+    "test:dev": "nodemon --exec 'npm run test'"
   },
   "repository": {
     "type": "git",
