--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "dotenv": "^14.3.0",
+    "flush-promises": "^1.0.2",
     "jest": "^27.4.7",
     "typescript": "^4.5.4",
     "vuex": "^4.0.2",
