--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "dev": "tsc --watch",
-    "test": "jest",
-    "test:dev": "jest --watch"
+    "test": "node ./test",
+    "test:dev": "nodemon ./test"
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,10 @@
     "vue": "^3.2.29"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "dotenv": "^14.3.0",
-    "flush-promises": "^1.0.2",
-    "jest": "^27.4.7",
+    "mocha": "^9.2.1",
     "typescript": "^4.5.4",
-    "vuex": "^4.0.2",
-    "vuex-module-decorators": "^2.0.0"
+    "vuex": "^4.0.2"
   }
 }
